DOCS - update cr_vs_out chart

--- a/docs/mgr/CompressionOptimizerCUDA.tex
+++ b/docs/mgr/CompressionOptimizerCUDA.tex
@@ -1259,7 +1259,7 @@ Time+Cons+Rand & 1.37 & 0.60 & rle,scale,afl,n,delta,dict,afl,n,n & 2.28 \\
 
 Wyniki testu przedstawia tabela \ref{tab:opt_vs_single}, w której:
 \begin{itemize}
-\item Dane - kombinacja paczek danych o ró¿nych charakterystykach co 5 paczek,
+\item Dane - kombinacja paczek danych o ró¿nych charakterystykach (zmiana co 5 paczek)
 \item COpt - wsp. kompresji osi¹gniêty przez optymalizator
 \item CSch - wsp. kompresji osi¹gniêty przez optymalne drzewo dla 1 paczki w kompresji ca³oœci danych
 \item Zysk - stosunek COpt do CSch, czyli wzrost wspó³czynnika kompresji przy u¿yciu optymalizatora
@@ -1277,7 +1277,7 @@ wartoœci niepasuj¹cych w losowych miejscach.
 
     \begin{figure}[!ht]
         \centering
-        \hspace*{-0.25cm}\includegraphics[scale=0.3]{img/cr_vs_out}
+        \hspace*{-0.25cm}\includegraphics[scale=0.75]{img/cr_vs_out_new}
         \vspace*{-3mm}
         \caption{wsp. kompresji vs \% outliers}
         \label{ref:cr_vs_out}
